FIX: scrollbar compatible with mac os
Former-commit-id: 565308e5696d20d3a06129b1a2755a2fde3c7efc [formerly 6d0091d90108953ebca0123127a9a5691c522a30]
Former-commit-id: d6d53a5d58738480cf6cc2e04b1ecd5ea3e0574c

--- a/css/_basic.scss
+++ b/css/_basic.scss
@@ -29,3 +29,17 @@
 	display: block;
 	white-space: nowrap;
 }
+
+.biojs_msa_labelblock::-webkit-scrollbar, .biojs_msa_header::-webkit-scrollbar{
+	// FIX scrollbars on Mac
+	-webkit-appearance: none;
+	width: 7px;
+	height: 7px;
+}
+.biojs_msa_labelblock::-webkit-scrollbar-thumb, .biojs_msa_header::-webkit-scrollbar-thumb{
+	border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
